Minor java code cleanup use of valueOf instead creating new Objects
r13907